--- a/Proyecto.WEB/Views/Productos/Delete.cshtml
+++ b/Proyecto.WEB/Views/Productos/Delete.cshtml
@@ -21,7 +21,7 @@
     </dl>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-action="Delete" method="post">
     <input type="hidden" asp-for="IdProducto" />
     <button type="submit" class="btn btn-danger">Eliminar</button>
     <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
